--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i1E-fF-jWs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i1E-fF-jWs">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -142,6 +142,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G5a-jq-z3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="713"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="CpS-7C-D9Y">
+            <objects>
+                <viewController id="EHy-Ch-xUr" customClass="LoginViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="l8C-g2-lKf"/>
+                        <viewControllerLayoutGuide type="bottom" id="WVY-1K-8kg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mtn-ud-juv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kr3-ke-BLV">
+                                <rect key="frame" x="114" y="285" width="372" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bXw-g5-NSd">
+                                <rect key="frame" x="114" y="363" width="372" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="yZv-vm-b0D"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENk-hG-wGn">
+                                <rect key="frame" x="205" y="427" width="190" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="190" id="HcT-XC-bgp"/>
+                                </constraints>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginPressed:" destination="EHy-Ch-xUr" eventType="touchUpInside" id="QL7-Cj-gaa"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Debug Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBs-W6-Gi3">
+                                <rect key="frame" x="168" y="230" width="265" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WVY-1K-8kg" firstAttribute="top" secondItem="ENk-hG-wGn" secondAttribute="bottom" constant="127" id="2d9-gX-gF1"/>
+                            <constraint firstItem="bXw-g5-NSd" firstAttribute="top" secondItem="kr3-ke-BLV" secondAttribute="bottom" constant="48" id="3Dd-oV-3Wq"/>
+                            <constraint firstItem="bXw-g5-NSd" firstAttribute="trailing" secondItem="kr3-ke-BLV" secondAttribute="trailing" id="A8U-WW-fmh"/>
+                            <constraint firstItem="ENk-hG-wGn" firstAttribute="centerX" secondItem="bXw-g5-NSd" secondAttribute="centerX" id="QjT-b2-oRu"/>
+                            <constraint firstItem="ENk-hG-wGn" firstAttribute="top" secondItem="bXw-g5-NSd" secondAttribute="bottom" constant="34" id="cMB-ls-47e"/>
+                            <constraint firstItem="kr3-ke-BLV" firstAttribute="centerX" secondItem="mtn-ud-juv" secondAttribute="centerX" id="eMl-Tc-3CH"/>
+                            <constraint firstItem="bXw-g5-NSd" firstAttribute="leading" secondItem="kr3-ke-BLV" secondAttribute="leading" id="tQf-YS-3k7"/>
+                            <constraint firstItem="kr3-ke-BLV" firstAttribute="leading" secondItem="mtn-ud-juv" secondAttribute="leadingMargin" constant="94" id="vOn-eW-FB2"/>
+                            <constraint firstItem="kr3-ke-BLV" firstAttribute="centerY" secondItem="mtn-ud-juv" secondAttribute="centerY" id="yGr-TX-NC8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="debugText" destination="JBs-W6-Gi3" id="mGO-y7-gGQ"/>
+                        <outlet property="loginButton" destination="ENk-hG-wGn" id="5Be-vd-58K"/>
+                        <outlet property="passwordTextField" destination="bXw-g5-NSd" id="VIK-Je-TQp"/>
+                        <outlet property="userNameTextField" destination="kr3-ke-BLV" id="mmT-sN-F0K"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gl3-Vq-CzE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1582" y="-1"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IPJ-bK-97v">
