--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -91,21 +91,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Where are you studying today?" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZf-47-0fy">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="170"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZf-47-0fy">
+                                <rect key="frame" x="0.0" y="80" width="600" height="89"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="wv3-Fn-MUp"/>
+                                    <constraint firstAttribute="height" constant="89" id="wv3-Fn-MUp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Type your answer here..." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="jEN-hA-52c">
-                                <rect key="frame" x="0.0" y="178" width="600" height="247"/>
-                                <color key="backgroundColor" name="selectedTextBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" keyboardAppearance="alert" returnKeyType="go"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E51-gC-abb">
                                 <rect key="frame" x="224" y="433" width="153" height="45"/>
@@ -113,30 +106,66 @@
                                     <constraint firstAttribute="width" constant="153" id="Go8-8J-u37"/>
                                     <constraint firstAttribute="height" constant="45" id="vfJ-hW-kYI"/>
                                 </constraints>
-                                <state key="normal" title="Submit"/>
+                                <state key="normal" title="Find on the Map"/>
                                 <connections>
-                                    <action selector="submitButton:" destination="0nf-LG-OEF" eventType="touchUpInside" id="GEK-Xc-lX5"/>
+                                    <action selector="findOnTheMap:" destination="0nf-LG-OEF" eventType="touchUpInside" id="Ukp-sY-uTZ"/>
                                 </connections>
                             </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kNb-P4-YwK">
+                                <rect key="frame" x="0.0" y="142" width="600" height="458"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="458" id="c9q-g3-38x"/>
+                                </constraints>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tcY-Eh-Jkf">
+                                <rect key="frame" x="224" y="442" width="153" height="28"/>
+                                <state key="normal" title="SUBMIT"/>
+                                <connections>
+                                    <action selector="submitButton:" destination="0nf-LG-OEF" eventType="touchUpInside" id="dIN-jd-JmR"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Location here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H8a-ue-Mmk">
+                                <rect key="frame" x="138" y="160" width="324" height="30"/>
+                                <color key="backgroundColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="324" id="WiN-am-f2U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Paste URL Here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="naa-uf-Zfp">
+                                <rect key="frame" x="138" y="160" width="324" height="30"/>
+                                <color key="backgroundColor" name="controlHighlightColor" catalog="System" colorSpace="catalog"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="E51-gC-abb" firstAttribute="top" secondItem="jEN-hA-52c" secondAttribute="bottom" constant="8" id="3R1-3c-2y1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dZf-47-0fy" secondAttribute="trailing" constant="-20" id="9jx-JS-OKn"/>
-                            <constraint firstItem="jEN-hA-52c" firstAttribute="leading" secondItem="n61-BZ-cJm" secondAttribute="leadingMargin" constant="-20" id="ELL-7a-DCl"/>
-                            <constraint firstItem="E51-gC-abb" firstAttribute="centerX" secondItem="jEN-hA-52c" secondAttribute="centerX" id="HJ4-O3-fnF"/>
+                            <constraint firstItem="naa-uf-Zfp" firstAttribute="baseline" secondItem="H8a-ue-Mmk" secondAttribute="baseline" id="AQ7-mA-8Uo"/>
+                            <constraint firstItem="tcY-Eh-Jkf" firstAttribute="trailing" secondItem="E51-gC-abb" secondAttribute="trailing" id="ESR-4g-A8k"/>
                             <constraint firstItem="dZf-47-0fy" firstAttribute="leading" secondItem="n61-BZ-cJm" secondAttribute="leadingMargin" constant="-20" id="IeB-WT-iuP"/>
+                            <constraint firstItem="H8a-ue-Mmk" firstAttribute="top" secondItem="Edn-hg-vds" secondAttribute="bottom" constant="140" id="LYk-zU-uDi"/>
                             <constraint firstItem="Vzp-Ci-NdR" firstAttribute="top" secondItem="E51-gC-abb" secondAttribute="bottom" constant="122" id="Qpc-lU-2le"/>
-                            <constraint firstItem="E51-gC-abb" firstAttribute="top" secondItem="jEN-hA-52c" secondAttribute="bottom" constant="8" id="SfF-tC-z0c"/>
-                            <constraint firstItem="dZf-47-0fy" firstAttribute="top" secondItem="n61-BZ-cJm" secondAttribute="topMargin" id="kGb-i9-a31"/>
-                            <constraint firstItem="jEN-hA-52c" firstAttribute="top" secondItem="dZf-47-0fy" secondAttribute="bottom" constant="8" id="qXh-jy-CYb"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="jEN-hA-52c" secondAttribute="trailing" constant="-20" id="wKC-XD-A1C"/>
-                            <constraint firstItem="E51-gC-abb" firstAttribute="top" secondItem="jEN-hA-52c" secondAttribute="bottom" constant="8" symbolic="YES" id="zdv-Er-dOf"/>
+                            <constraint firstItem="kNb-P4-YwK" firstAttribute="bottom" secondItem="Vzp-Ci-NdR" secondAttribute="top" id="T2v-kZ-8O8"/>
+                            <constraint firstItem="tcY-Eh-Jkf" firstAttribute="leading" secondItem="E51-gC-abb" secondAttribute="leading" id="XQD-2q-bHk"/>
+                            <constraint firstItem="H8a-ue-Mmk" firstAttribute="centerX" secondItem="kNb-P4-YwK" secondAttribute="centerX" id="Z1d-WL-TH7"/>
+                            <constraint firstItem="H8a-ue-Mmk" firstAttribute="centerX" secondItem="dZf-47-0fy" secondAttribute="centerX" id="f7t-Jz-aqT"/>
+                            <constraint firstItem="tcY-Eh-Jkf" firstAttribute="centerY" secondItem="E51-gC-abb" secondAttribute="centerY" id="kCF-eH-Ub4"/>
+                            <constraint firstItem="dZf-47-0fy" firstAttribute="top" secondItem="n61-BZ-cJm" secondAttribute="topMargin" constant="81" id="kGb-i9-a31"/>
+                            <constraint firstItem="H8a-ue-Mmk" firstAttribute="centerX" secondItem="tcY-Eh-Jkf" secondAttribute="centerX" id="mXH-JR-4g9"/>
+                            <constraint firstItem="naa-uf-Zfp" firstAttribute="leading" secondItem="H8a-ue-Mmk" secondAttribute="leading" id="vn8-JD-gAJ"/>
+                            <constraint firstItem="naa-uf-Zfp" firstAttribute="centerX" secondItem="kNb-P4-YwK" secondAttribute="centerX" id="yz9-oM-rDU"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="submitButton" destination="E51-gC-abb" id="HAt-Fw-kZ6"/>
-                        <outlet property="textLocation" destination="jEN-hA-52c" id="Bsk-XF-NVv"/>
+                        <outlet property="findOnTheMap" destination="E51-gC-abb" id="dbR-7X-Um0"/>
+                        <outlet property="myMediaUrl" destination="naa-uf-Zfp" id="2PL-ai-gcg"/>
+                        <outlet property="myMiniMapView" destination="kNb-P4-YwK" id="hyI-mf-TBW"/>
+                        <outlet property="questionText" destination="dZf-47-0fy" id="upd-XA-0sW"/>
+                        <outlet property="submitOutlet" destination="tcY-Eh-Jkf" id="J4x-NB-IWE"/>
+                        <outlet property="textLocation" destination="H8a-ue-Mmk" id="LXx-Eg-t4O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G5a-jq-z3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -235,7 +264,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="bId-Jq-gMf">
                         <barButtonItem key="leftBarButtonItem" image="pinIcon" style="plain" id="WCv-CX-Yzv">
                             <connections>
-                                <segue destination="0nf-LG-OEF" kind="presentation" id="x4Y-Kb-Ww8"/>
+                                <segue destination="0nf-LG-OEF" kind="presentation" id="HKN-O5-uZx"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="CeP-04-sEf"/>
